[package]
name = "bevy-snapshot-interpolation"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/*"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
transport = { path = "crates/transport" }
physics = { path = "crates/physics" }
bevy_extensions = { path = "crates/bevy_extensions" }
bevy = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
fastrand = "1.7"
